fixed smaller pull quote font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ body{
 	margin-left: 27%;
 	margin-top: 2%;
 	font-family: 'Athelas', serif;
-	font-size: 130%;
+	font-size: 136%;
 	color: #000;
 	line-height: 1.7em;
 }
